--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "cypress": "^13.13.1"
+  },
+  "dependencies": {
+    "cursocypress": "file:"
   }
 }
